--- a/WindowsFormsApplication1/Properties/Resources.resx
+++ b/WindowsFormsApplication1/Properties/Resources.resx
@@ -118,19 +118,43 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="pictureRoomIndex21" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pictureRoomIndex21.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pictureSpacingLayout2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pictureSpacingLayout2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="pictureRoomIndex1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pictureRoomIndex1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="pictureSpacing" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pictureSpacing.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="pictureSpacingLayout11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pictureSpacingLayout11.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pictureSpacingLayout1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pictureSpacingLayout1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="pictureRoomIndex1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pictureRoomIndex1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pictureRoomIndex2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pictureRoomIndex2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pictureRoomIndex11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pictureRoomIndex11.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pictureRoomIndex12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pictureRoomIndex12.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pictureSpacingLayout22" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pictureSpacingLayout22.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pictureSpacingLayout21" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pictureSpacingLayout21.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pictureSpacingLayout12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pictureSpacingLayout12.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pictureRoomIndex22" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pictureRoomIndex22.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
